--- a/main.css
+++ b/main.css
@@ -1,44 +1,81 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 20px;
+@import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
+
+.fa-2x {
+    font-size: 2em;
 }
 
-h1 {
+.fa {
+    position: relative;
+    display: table-cell;
+    width: 60px;
+    height: 36px;
     text-align: center;
+    vertical-align: middle;
+    font-size: 20px;
 }
 
-form {
-    margin-bottom: 20px;
+.main-menu:hover {
+    width: 250px;
+    overflow: visible;
 }
 
-label {
-    display: inline-block;
-    width: 100px;
+.main-menu {
+    background: #212121;
+    border-right: 1px solid #e5e5e5;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    height: 100%;
+    left: 0;
+    width: 60px;
+    overflow: hidden;
+    transition: width .05s linear;
+    z-index: 1000;
 }
 
-input {
-    margin-bottom: 10px;
+.main-menu > ul {
+    margin: 7px 0;
 }
 
-button {
-    display: inline-block;
-    margin-top: 10px;
-    padding: 5px 10px;
-    cursor: pointer;
+.main-menu li {
+    position: relative;
+    display: block;
+    width: 250px;
 }
 
-table {
-    width: 100%;
+.main-menu li > a {
+    position: relative;
+    display: table;
     border-collapse: collapse;
-    margin-top: 20px;
+    color: #999;
+    font-size: 14px;
+    text-decoration: none;
+    transition: all .1s linear;
 }
 
-th, td {
-    border: 1px solid #ccc;
-    padding: 10px;
-    text-align: left;
+.main-menu .nav-text {
+    position: relative;
+    display: table-cell;
+    vertical-align: middle;
+    width: 190px;
+    font-family: sans-serif;
 }
 
-th {
-    background-color: #f4f4f4;
+nav ul, nav li {
+    outline: 0;
+    margin: 0;
+    padding: 0;
 }
+
+.main-menu li:hover > a{
+    color: #fff;
+    background-color: #000000;
+}
+
+.area {
+    float: left;
+    background: #e2e2e2;
+    width: 100%;
+    height: 100%;
+}
+
