--- a/main.css
+++ b/main.css
@@ -1,82 +1,77 @@
-@import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
-
-.fa-2x {
-    font-size: 2em;
-}
-
-.fa {
-    position: relative;
-    display: table-cell;
-    width: 64px;
-    height: 40px;
-    text-align: center;
-    vertical-align: middle;
-    font-size: 32px;
-}
-
-.main-menu:hover {
-    width: 250px;
-    overflow: visible;
-}
-
-.main-menu {
-    background: #212121;
-    border-right: 1px solid #e5e5e5;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    height: 100%;
-    left: 0;
-    width: 65px;
-    overflow: hidden;
-    transition: width .05s linear;
-    z-index: 10;
-}
-
-.main-menu > ul {
-    margin: 20px 0;
-}
-
-.main-menu li {
-    position: relative;
-    display: block;
-    width: 250px;
-    margin: 8px 0;
-}
-
-.main-menu li > a {
-    position: relative;
-    display: table;
-    border-collapse: collapse;
-    color: #999;
-    font-size: 18px;
-    text-decoration: none;
-    transition: all .1s linear;
-}
-
-.main-menu .nav-text {
-    position: relative;
-    display: table-cell;
-    vertical-align: middle;
-    width: 190px;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: sans-serif;
 }
 
-nav ul, nav li {
-    outline: 0;
-    margin: 0;
-    padding: 0;
+main {
+    display: flex;
+    align-items: flex-start;
 }
 
-.main-menu li:hover > a{
-    color: #fff;
-    background-color: #000000;
-}
-
-.area {
-    float: left;
-    background: #e2e2e2;
+.sidebar-box {
+    height: 100vh;
+    max-width: 300px;
     width: 100%;
-    height: 100%;
+    background-color: #226fd5;
+    transition: 0.5s;
 }
 
+.sidebar-menu {
+    list-style: none;
+}
+
+.menu-item {
+    padding: 10px 16px;
+    border-left: 4px solid transparent;
+    margin: 20px 0;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    color: #ffffff80;
+    cursor: pointer;
+}
+
+.menu-item i {
+    font-size: 30px;
+    margin-right: 10px;
+}
+
+.bi-list {
+    display: none;
+}
+
+.btn-icon {
+    background-color: transparent;
+    border: none;
+    font-size: 30px;
+    margin: 20px;
+    cursor: pointer;
+    color: #ffffff;
+}
+
+.box-btn {
+    background: #226fd5;
+    width: 100%;
+}
+
+.shrink {
+    max-width: 80px;
+}
+
+.menu-item span {
+    transition: 0.3s;
+}
+
+.shrink .menu-item span {
+    opacity: 0;
+}
+
+.menu-show .bi-list {
+    display: block;
+}
+
+.menu-show .bi-x-circle {
+    display: none;
+}
