--- a/main.css
+++ b/main.css
@@ -11,35 +11,53 @@ body {
     justify-content: center;
     height: 100vh;
 }
-.title {
-    font-size: 2rem;
-}
-.form {
-    margin: 20px 0;
-}
-.input-time {
+.box {
     background: antiquewhite;
     border-radius: 10px;
-    border: none;
-    padding: 5px 10px;
-    outline: none;
+    padding: 20px 30px;
+    min-width: 500px;
 }
-.submit {
-    background: #57bf23;
-    color: #fff;
-    padding: 7px 15px;
-    border: 1px solid #57bf23;
-    border-radius: 10px;
+h3 {
+    text-align: center;
+    font-size: 20px;
+    color: #000;
+}
+.form {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+input {
+    width: 80%;
+    margin: 15px 0;
+    outline: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: 500;
+}
+.label {
+    text-align: left;
+}
+.btn {
+    background: #66d130;
+    border: 1px solid #2b7704;
+    color: #ffffff;
+}
+.selects {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+select {
+    width: 20%;
+    border-radius: 4px;
+    padding: 6px 8px;
+    background: rgba(20, 225, 225, 0.66);
 }
 #res {
-    width: 30%;
-    background: rgba(122, 122, 121, 0.54);
     text-align: center;
-    color: white;
-    padding: 20px 0;
-    border-radius: 20px;
-}
-.rang {
-    color: red;
-    padding: 6px 0;
+    font-size: 16px;
+    font-weight: 600;
 }
