--- a/main.css
+++ b/main.css
@@ -4,32 +4,44 @@
     box-sizing: border-box;
     font-family: sans-serif;
 }
+
 body {
     display: flex;
     align-items: center;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     height: 100vh;
+    background-image: url("https://www.wsfsbank.com/wp-content/uploads/Knowledge_Center_Large_Image_Foreign_Exchange_2023.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+
 .box {
-    background: antiquewhite;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background: rgba(215, 250, 247, 0.84);
     border-radius: 10px;
     padding: 20px 30px;
     min-width: 500px;
 }
+
 h3 {
     text-align: center;
     font-size: 20px;
     color: #000;
 }
+
 .form {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-}
-input {
     width: 80%;
+}
+
+input {
+    width: 90%;
     margin: 15px 0;
     outline: none;
     border-radius: 5px;
@@ -37,25 +49,30 @@ input {
     font-size: 16px;
     font-weight: 500;
 }
+
 .label {
     text-align: left;
 }
+
 .btn {
     background: #66d130;
     border: 1px solid #2b7704;
     color: #ffffff;
 }
+
 .selects {
     display: flex;
     justify-content: space-around;
     width: 100%;
 }
+
 select {
-    width: 20%;
+    width: 40%;
     border-radius: 4px;
     padding: 6px 8px;
     background: rgba(20, 225, 225, 0.66);
 }
+
 #res {
     text-align: center;
     font-size: 16px;
