--- a/src/main.css
+++ b/src/main.css
@@ -5,27 +5,52 @@
     font-family: sans-serif;
 }
 
-body {
-    background: linear-gradient(263deg, #1deab5, #65ea32, #deea32, #ea7c32, #32beea, #3265ea, #b132ea, #e132ea, #ea328e);
-    background-size: 1800% 1800%;
+/*body {*/
+/*    background: linear-gradient(263deg, #1deab5, #65ea32, #deea32, #ea7c32, #32beea, #3265ea, #b132ea, #e132ea, #ea328e);*/
+/*    background-size: 1800% 1800%;*/
 
-    -webkit-animation: AnimationName 20s ease infinite;
-    -moz-animation: AnimationName 20s ease infinite;
-    animation: AnimationName 20s ease infinite;
+/*    -webkit-animation: AnimationName 20s ease infinite;*/
+/*    -moz-animation: AnimationName 20s ease infinite;*/
+/*    animation: AnimationName 20s ease infinite;*/
+/*}*/
+
+/*@-webkit-keyframes AnimationName {*/
+/*    0%{background-position:0% 55%}*/
+/*    50%{background-position:100% 46%}*/
+/*    100%{background-position:0% 55%}*/
+/*}*/
+/*@-moz-keyframes AnimationName {*/
+/*    0%{background-position:0% 55%}*/
+/*    50%{background-position:100% 46%}*/
+/*    100%{background-position:0% 55%}*/
+/*}*/
+/*@keyframes AnimationName {*/
+/*    0%{background-position:0% 55%}*/
+/*    50%{background-position:100% 46%}*/
+/*    100%{background-position:0% 55%}*/
+/*}*/
+
+body {
+    background: linear-gradient(270deg, #2a4941, #46603f, #62382b, #6a6f23, #235d6f, #741e70, #7d1329);
+    background-size: 1400% 1400%;
+
+    -webkit-animation: AnimationName 30s ease infinite;
+    -moz-animation: AnimationName 30s ease infinite;
+    animation: AnimationName 30s ease infinite;
 }
 
 @-webkit-keyframes AnimationName {
-    0%{background-position:0% 55%}
-    50%{background-position:100% 46%}
-    100%{background-position:0% 55%}
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
 }
 @-moz-keyframes AnimationName {
-    0%{background-position:0% 55%}
-    50%{background-position:100% 46%}
-    100%{background-position:0% 55%}
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
 }
 @keyframes AnimationName {
-    0%{background-position:0% 55%}
-    50%{background-position:100% 46%}
-    100%{background-position:0% 55%}
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
 }
