--- a/src/main.css
+++ b/src/main.css
@@ -5,32 +5,49 @@
     font-family: sans-serif;
 }
 
-/*body {*/
-/*    background: linear-gradient(263deg, #1deab5, #65ea32, #deea32, #ea7c32, #32beea, #3265ea, #b132ea, #e132ea, #ea328e);*/
-/*    background-size: 1800% 1800%;*/
+.box {
+    background: rgba(12, 12, 12, 0.58);
+    backdrop-filter: blur(10px);
+    width: 100%;
+    height: 100%;
+    padding: 50px 0;
+}
 
-/*    -webkit-animation: AnimationName 20s ease infinite;*/
-/*    -moz-animation: AnimationName 20s ease infinite;*/
-/*    animation: AnimationName 20s ease infinite;*/
-/*}*/
+#list li * {
+    pointer-events: none;
+}
+#list > li {
+    width: 60%;
+    border-bottom: 1px solid #ece5e5;
+    padding: 10px;
+    display: flex;
 
-/*@-webkit-keyframes AnimationName {*/
-/*    0%{background-position:0% 55%}*/
-/*    50%{background-position:100% 46%}*/
-/*    100%{background-position:0% 55%}*/
-/*}*/
-/*@-moz-keyframes AnimationName {*/
-/*    0%{background-position:0% 55%}*/
-/*    50%{background-position:100% 46%}*/
-/*    100%{background-position:0% 55%}*/
-/*}*/
-/*@keyframes AnimationName {*/
-/*    0%{background-position:0% 55%}*/
-/*    50%{background-position:100% 46%}*/
-/*    100%{background-position:0% 55%}*/
-/*}*/
+}
+#list li:last-child {
+    border: none;
+}
+#list li video {
+    max-width: 100px;
+    max-height: 100px;
+}
 
-body {
+.title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 10px;
+    color: white;
+}
+.accent {
+    accent-color: white;
+}
+
+.time {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.animation {
     background: linear-gradient(270deg, #2a4941, #46603f, #62382b, #6a6f23, #235d6f, #741e70, #7d1329);
     background-size: 1400% 1400%;
 
@@ -54,3 +71,4 @@ body {
     50%{background-position:100% 50%}
     100%{background-position:0% 50%}
 }
+
