--- a/src/main.css
+++ b/src/main.css
@@ -38,6 +38,14 @@
     padding: 0 10px;
     color: white;
 }
+
+.change-icon .bi-view-list {
+    display: none;
+}
+.change-icon .bi-x {
+    display: block;
+}
+
 .accent {
     accent-color: white;
 }
