--- a/src/main.css
+++ b/src/main.css
@@ -46,6 +46,13 @@
     display: block;
 }
 
+.clear-list .bi-view-list {
+    display: block;
+}
+.clear-list .bi-x {
+    display: none;
+}
+
 .accent {
     accent-color: white;
 }
