--- a/src/main.css
+++ b/src/main.css
@@ -5,63 +5,49 @@
     font-family: sans-serif;
 }
 
+body {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(122deg, #186954, #2e1869, #711442, #713514, #2b2420);
+    background-size: 1000% 1000%;
+    -webkit-animation: AnimationName 9s ease infinite;
+    -moz-animation: AnimationName 9s ease infinite;
+    animation: AnimationName 9s ease infinite;
+}
+
 .box {
-    background: rgba(12, 12, 12, 0.58);
-    backdrop-filter: blur(10px);
-    width: 100%;
-    height: 100%;
-    padding: 50px 0;
+    display: grid;
+    grid-template-columns: repeat(3, 300px);
+    grid-template-rows: repeat(2, 1fr);
+    padding: 20px;
+    gap: 20px;
 }
-
-#list li * {
-    pointer-events: none;
+.card {
+    backdrop-filter: blur(30px);
+    box-shadow: 0 0 30px rgba(116, 116, 117, 0.73);
+    padding: 20px 0;
+    border-radius: 10px;
 }
-#list > li {
-    width: 60%;
-    border-bottom: 1px solid #ece5e5;
-    padding: 10px;
-    display: flex;
-
+.card:hover {
+    scale: 1.05;
+    transition: 2s;
 }
-#list li:last-child {
-    border: none;
+.img {
+    width: 120px;
+    height: 120px;
+    border-radius: 15px;
+    object-fit: cover;
 }
-#list li video {
-    max-width: 100px;
-    max-height: 100px;
-}
-
 .title {
+    width: 100%;
     display: flex;
+    justify-content: space-evenly;
     align-items: center;
-    justify-content: space-between;
-    padding: 0 10px;
     color: white;
-}
-
-.change-icon .bi-view-list {
-    display: none;
-}
-.change-icon .bi-x {
-    display: block;
-}
-
-.accent {
-    accent-color: white;
-}
-
-.time {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.animation {
-    background: linear-gradient(270deg, #2a4941, #46603f, #62382b, #6a6f23, #235d6f, #741e70, #7d1329);
-    background-size: 1400% 1400%;
-
-    -webkit-animation: AnimationName 30s ease infinite;
-    -moz-animation: AnimationName 30s ease infinite;
-    animation: AnimationName 30s ease infinite;
+    padding: 10px 0;
 }
 
 @-webkit-keyframes AnimationName {
