--- a/src/main.css
+++ b/src/main.css
@@ -4,50 +4,54 @@
     box-sizing: border-box;
     font-family: sans-serif;
 }
-
+html {
+    font-size: 10px;
+}
 body {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(122deg, #186954, #2e1869, #711442, #713514, #2b2420);
-    background-size: 1000% 1000%;
-    -webkit-animation: AnimationName 9s ease infinite;
-    -moz-animation: AnimationName 9s ease infinite;
-    animation: AnimationName 9s ease infinite;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(43deg, #6ef7d4, #70f76e, #e8f76e, #f7d06e, #6ee3f7, #6e82f7, #ae6ef7, #f76ee5);
+    background-size: 1600% 1600%;
+
+    -webkit-animation: AnimationName 17s ease infinite;
+    -moz-animation: AnimationName 17s ease infinite;
+    animation: AnimationName 17s ease infinite;
 }
 
 .box {
+    width: 100%;
+    margin: 50px;
     display: grid;
-    grid-template-columns: repeat(3, 300px);
-    grid-template-rows: repeat(2, 1fr);
-    padding: 20px;
+    grid-template-columns: repeat(4, 350px);
     gap: 20px;
 }
+
 .card {
-    backdrop-filter: blur(30px);
-    box-shadow: 0 0 30px rgba(116, 116, 117, 0.73);
-    padding: 20px 0;
+    padding: 10px;
     border-radius: 10px;
+    background: #B1B0AE;
+    /*box-shadow: 0 0 50px rgba(94, 94, 251, 0.73);*/
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+    cursor: pointer;
+    color: white;
+    transition: 1s;
 }
+
 .card:hover {
     scale: 1.05;
-    transition: 2s;
 }
+
 .img {
-    width: 120px;
-    height: 120px;
-    border-radius: 15px;
-    object-fit: cover;
+    width: 200px;
+    height: 200px;
+    border-radius: 20px;
 }
 .title {
     width: 100%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    color: white;
-    padding: 10px 0;
+    padding: 10px;
 }
 
 @-webkit-keyframes AnimationName {
@@ -65,4 +69,7 @@ body {
     50%{background-position:100% 50%}
     100%{background-position:0% 50%}
 }
+
+
+
 
