--- a/css/main.css
+++ b/css/main.css
@@ -1,51 +1,92 @@
-@import "reset.css";
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body {
-    margin: 0 auto;
     width: 100vw;
     height: 100vh;
     font-family: sans-serif;
+    background-image: url("/image/country-flags.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+.wrapper {
+    max-width: 1400px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("/image/il_570xN.2394825091_oy73.webp");
-    background-size: 1500px 700px;
-    background-repeat: no-repeat;
-    background-position: center;
+    width: 100%;
 }
-
 
 .box {
-    background-color: rgba(128, 128, 128, 0.4);
-    width: 450px;
-    height: 350px;
-    border-radius: 20px;
+    max-width: 1000px;
+    min-height: 500px;
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 100%;
+    margin-top: 60px;
+    border-radius: 30px;
     padding: 40px;
-    gap: 20px 0;
+    background-color: rgba(128, 128, 128, 0.87);
 }
 
-button {
-    background-color: #0f709a;
+.inputs {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    width: 100%;
+    height: 100%;
+}
+
+select {
+    min-width: 220px;
+    background-color: cornflowerblue;
+    border-radius: 8px;
+    height: 30px;
+    border: 1px solid #103def;
+    outline: none;
+    appearance: none;
+    padding-left: 10px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+#holiday-date {
+    min-width: 220px;
+    background-color: cornflowerblue;
+    border-radius: 8px;
+    height: 30px;
+    border: 1px solid #103def;
+    text-indent: 10px;
+    outline: none;
+    appearance: none;
+}
+
+.table > table {
+    width: 100%;
+    margin: 20px 0;
+}
+
+table, th, td {
+    border: 1px solid rgba(250, 235, 215, 0.71);
+    border-collapse: collapse;
+    padding: 5px 8px;
+}
+
+th {
     color: white;
-    font-size: 16px;
-    font-weight: 600;
-    padding: 10px 20px;
-    border-radius: 10px;
-    border: 1px solid cornflowerblue;
-    transition: 0.3s;
+    padding: 8px 10px;
 }
 
-button:active {
-    transform: scale(0.95);
-    background-color: cadetblue;
-}
-
-#img-box > img {
-    width: 450px;
-    height: 250px;
-    border-radius: 20px;
+td {
+    color: rgba(255, 255, 255, 0.84);
 }
