--- a/css/main.css
+++ b/css/main.css
@@ -1,280 +1,32 @@
-@import "reset.css";
-
-.container {
-    max-width: 1400px;
-    margin: 0 auto;
-    width: 100%;
-    padding: 0 20px;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: sans-serif;
 }
 
-.head {
-    padding: 20px 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.wrapper {
+    max-width: 1400px;
+    width: 100%;
+}
+
+.wrapper-cards {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
     gap: 10px;
 }
 
-.logo {
-    font-size: 30px;
-    font-weight: 700;
-    display: flex;
-    align-items: center;
+.card img{
+    width: 200px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 10px;
 }
-
-.logo > img {
-    width: 100px;
-}
-
-.header-search {
-    max-width: 400px;
-    width: 100%;
-    border-radius: 30px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    overflow: hidden;
-    padding: 0 20px;
-    box-shadow: rgba(0, 0, 0, 0.53) 0 0 10px;
-}
-
-.header-search > input {
-    height: 100%;
-    flex: 1;
-    border: none;
-    outline: none;
-    font-size: 18px;
-}
-
-.header-search > button {
-    background-color: transparent;
-    border: none;
-    font-size: 20px;
-    color: gray;
-}
-
-.theme {
-    position: relative;
-    width: 60px;
-    border-radius: 20px;
-    height: 30px;
-    border: 1px solid gray;
-    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.53);
-}
-.bi-moon-fill {
-    display: none;
-}
-
-input[type="checkbox"] {
-    width: 100%;
-    height: 100%;
-    appearance: none;
-    -webkit-appearance: none;
-    cursor: pointer;
-}
-
-input[type="checkbox"] + label {
-    background-color: darkmagenta;
-    color: white;
-    width: 31px;
-    height: 31px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    border-radius: 50%;
-    top: 50%;
-    transform: translateY(-50%);
-    transition: 0.2s;
-    cursor: pointer;
-}
-
-input[type="checkbox"]:checked + label {
-    left: calc(100% - 30px);
-    transform: translateY(-50%) rotate(360deg);
-}
-
-input[type="checkbox"]:checked + label .bi-sun-fill {
-    display: none;
-}
-
-input[type="checkbox"]:checked + label .bi-moon-fill {
-    display: block;
-}
-
-.hero {
-    height: 400px;
-    border-radius: 20px;
-    overflow: hidden;
-    margin-top: 30px;
-    position: relative;
-    box-shadow: 0 0 30px rgba(88, 0, 139, 0.91);
-    background-image: url("/image/banner.jpg");
-    background-position: bottom;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 30px;
-    display: flex;
-    align-items: center;
-}
-
-.hero::after {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: linear-gradient(180deg, rgba(4, 249, 59, 0) 0%, rgba(159, 24, 227, 0.564) 100%);
-}
-
-.hero-content {
-    position: relative;
-    z-index: 5;
-    margin-top: 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: end;
-    width: 100%;
-}
-
-.content-left {
-    color: white;
-}
-
-.content-right {
-    color: white;
-    text-align: end;
-}
-.content-right :first-child {
-    padding-bottom: 15px;
-}
-
-.content-left > h2 {
-    font-size: 100px;
-    margin: 20px 0;
-}
-
-.content-left > img {
-    width: 100px;
-    margin-bottom: -20px;
-    margin-left: -20px;
-}
-
-.content-left > p {
-    font-size: 20px;
-    font-weight: 700;
-}
-.body {
-    margin: 50px 0;
-}
-.box {
-    max-width: 400px;
-    min-height: 200px;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 20px 0 20px 50px;
-    border: 1px solid rgba(139, 0, 139, 0.71);
-    border-radius: 20px;
-    box-shadow: 0 0 30px rgba(88, 0, 139, 0.72);
-}
-
-.row {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.line {
-    padding-bottom: 40px;
-}
-.time {
-    font-size: 20px;
-    font-weight: 600;
-}
-
-.td {
-    display: flex;
-    justify-content: start;
-    align-items: start;
-    width: 100%;
-    gap: 15px;
-}
-
-.td > i {
-    font-size: 40px;
-}
-.bi-droplet-half {
-    color: aqua;
-}
-.bi-sunrise {
-    color: #f6b680;
-}
-.bi-sun {
-    color: yellow;
-}
-.bi-sunset {
-    color: yellow;
-}
-
-.text > p {
-    font-size: 18px;
-    font-weight: 500;
-    padding-bottom: 6px;
-}
-
-.box2 {
-    margin-top: 50px;
-}
-.weather-indicator {
-    max-width: 400px;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 25px;
-    border: 1px solid rgba(139, 0, 139, 0.71);
-    border-radius: 20px;
-    box-shadow: 0 0 30px rgba(88, 0, 139, 0.72);
-    background: darkmagenta;
-    gap: 0 30px;
-}
-
-#air-pressure {
-    background-image: url("/image/air-pressure.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    width:190px;
-    height: 190px;
-    background-color: white;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 24px;
-}
-.compas {
-    width: 190px;
-    height: 190px;
-    background-image: url("/image/compass.svg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 92%;
-    background-color: white;
-    border-radius: 50%;
-}
-
-
-
