--- a/css/main.css
+++ b/css/main.css
@@ -10,11 +10,13 @@ body {
     justify-content: center;
     align-items: center;
     font-family: sans-serif;
+    background-color: rgba(169, 169, 169, 0.65);
 }
 
 .wrapper {
     max-width: 1400px;
     width: 100%;
+    margin: 50px 0;
 }
 
 .wrapper-cards {
@@ -24,14 +26,49 @@ body {
     gap: 10px;
 }
 
-.card img{
-    width: 200px;
-    height: 150px;
-    object-fit: cover;
-    border-radius: 10px;
+.body {
+    padding: 10px 14px;
 }
 
+.body div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px 0;
+}
 
+.card {
+    background-color: white;
+    max-width: 220px;
+    max-height: 400px;
+    border-radius: 10px;
+    transition: 0.5s;
+    box-shadow: rgba(0, 0, 0, 0.58) 0 10px 20px;
+}
+.card:hover {
+    transform: scale(1.05);
+}
+
+.card img{
+    width: 100%;
+    max-height: 150px;
+    object-fit: cover;
+    border-radius: 10px 10px 0 0;
+}
+.title {
+    color: midnightblue;
+    font-size: 16px;
+    font-weight: 700;
+}
+.price-discount {
+    color: #14071e;
+    font-weight: 800;
+}
+.description {
+    overflow: hidden;
+    height: 70px;
+    margin-bottom: 10px;
+}
 .update-modal{
     position: fixed;
     top: 0;
@@ -55,6 +92,12 @@ body {
     border-radius: 10px;
     width: 450px;
     text-align: center;
+}
+
+.btn {
+    display: flex;
+    align-items: center;
+    justify-content: end;
 }
 
 .top-form{
@@ -92,4 +135,27 @@ body {
     color: white;
     margin: 10px auto;
     cursor: pointer;
+}
+
+button {
+    padding: 6px 10px;
+    font-size: 14px;
+    border-radius: 8px;
+    border: none;
+}
+.bi-pencil-square {
+    pointer-events: none;
+}
+.edit {
+    background-color: #d1d11f;
+    color: white;
+}
+.delete {
+    background-color: #e82020;
+    color: white;
+}
+
+button:hover,
+button:active {
+    transform: scale(0.9);
 }
