--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     font-family: sans-serif;
     background-color: rgba(169, 169, 169, 0.65);
 }
@@ -82,8 +83,17 @@ body {
     align-items: center;
 }
 
-.show {
-    display: flex;
+.adding-modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 1000;
+    display: none;
+    justify-content: center;
+    align-items: center;
 }
 
 .modal{
@@ -105,7 +115,7 @@ body {
     justify-content: flex-end;
 }
 
-.top-form .close-modal{
+.top-form .close-modal, .close {
     cursor: pointer;
     padding: 0 20px;
     font-size: 20px;
@@ -146,10 +156,14 @@ button {
 .bi-pencil-square {
     pointer-events: none;
 }
+.bi-trash3 {
+    pointer-events: none;
+}
 .edit {
     background-color: #d1d11f;
     color: white;
 }
+
 .delete {
     background-color: #e82020;
     color: white;
