--- a/css/main.css
+++ b/css/main.css
@@ -154,3 +154,13 @@ body {
 .details .cast h3 {
     margin-bottom: .5em;
 }
+
+.btn {
+    color: white;
+    font-size: 16px;
+    border: none;
+    background-color: rgba(163, 172, 214, 0.43);
+    text-decoration: none;
+    border-radius: 15px;
+    padding: 6px 20px;
+}
